# getting-rusty

./: READM.md  README.md  script_folder_generation.sh
day1/: cmd.md
day1/hello_rust/src/: main.rs
day10/: README.md
day10/todo_cli/: Cargo.toml  tasks.json
day10/todo_cli/src/: main.rs
day11/: README.md
day11/timer_tool/: Cargo.toml
day11/timer_tool/src/: main.rs
day12/: README.md
day12/rock_paper_scissors/: Cargo.toml
day12/rock_paper_scissors/src/: main.rs
day13/: README.md
day13/json_parser/: Cargo.toml  error_sample.json  sample.json
day14/: README.md
day14/file_reader_cli/: Cargo.toml  sample.txt
day15/: README.md
day16/: README.md
day17/: README.md
day17/struct-based-contact-manager/: Cargo.toml
day18/: README.md
day18/simple_banking_system/: Cargo.toml  accounts.json
day19/: README.md
day19/banking_system_api/: Cargo.toml
day19/banking_system_api/src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
day2/: README.md
day20/: README.md
day21/: README.md
day21/crud-text-file/: Cargo.toml  notes.txt
day22/: README.md
day23/: README.md
day23/custom_error_types_in_cli_tools/: Cargo.toml
day24/: README.md
day25/: README.md
day26/: README.md
day27/: README.md
day28/: README.md
day29/: README.md
day3/: README.md
day3/simple_calculation/: Cargo.toml
day30/: README.md
day4/: README.md
day5/: README.md
day5/word_counter/: sample.txt
day6/: README.md
day6/bmi_calculator/: Cargo.toml
day7/: README.md
day8/: README.md
day8/fibonacci_sequence_generator/: Cargo.toml
day9/: README.md
(+18 files in other folders)
