[package]
name = "banking_system_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
argon2 = "0.5"
uuid = { version = "1.8", features = ["v4"] }